# symphainy-production

./: .cursorignore  .env.development  .gitignore  Dockerfile.e2e  GITHUB_SETUP_INSTRUCTIONS.md  README.md  check_frontend_status.sh  docker-compose.ci.yml  docker-compose.option-c.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  monitor_e2e_test.sh  run_cto_demo_tests.sh  test_e2e_flow.sh  test_optimal_architecture.py  test_parse_direct.sh  verify_containers.sh
symphainy-platform/: .dockerignore  .gitignore  =2.7.0  Dockerfile  Dockerfile.ci  POETRY_LOCK_FILE_ROOT_CAUSE_ANALYSIS.md  POETRY_LOCK_FIX_SUMMARY.md  README.md  SECRETS_MIGRATION_SUMMARY.md  SECRETS_SEPARATION_COMPLETE.md  SECRETS_VS_CONFIG_GUIDE.md  SECURITY_SECRETS_ANALYSIS.md  SECURITY_SECRETS_REMOVAL.md  celery_app.py  docker-compose.infrastructure.yml  grafana-datasources.yaml  logs.sh  loki-config.yaml  main.py  main_cloud_ready.py  otel-collector-config.yaml  poetry  pyproject.toml  requirements.txt  startup.sh  stop.sh  tempo-config.yaml  test_config.env
symphainy-platform/archive/: agent_base.py  agentic_service_base.py
symphainy-platform/backend/: __init__.py
symphainy-platform/bases/: __init__.py  foundation_service_base.py  manager_service_base.py  orchestrator_base.py  realm_service_base.py  smart_city_role_base.py  startup_policy.py
symphainy-platform/config/: __init__.py  business-logic.yaml  development.env  environment_loader.py  infrastructure.yaml  production.env  production.env.example  secrets.example  staging.env  testing.env
symphainy-platform/docs/: CAPABILITY_LIFECYCLE_IMPLEMENTATION_SUMMARY.md  CITY_MANAGER_BOOTSTRAP_PATTERN.md  E2E_ROUTING_FLOW_TEST_RESULTS.md  HOW_EVERYTHING_WORKS_TOGETHER.md  JWT_ADAPTER_RECOMMENDATIONS.md  PHASE1_BREAKAGE_SUMMARY.md  PHASE2_FIXES_SUMMARY.md  PHASE2_VALIDATION_STATUS.md  PHASE3_COMPLETE_SUMMARY.md  PHASE3_TESTING_FIXES.md  PHASE3_TESTING_FIXES_COMPLETE.md  PLATFORM_CLEANUP_AND_REFACTORING_PLAN.md  PLATFORM_STARTUP.md  REGISTRY_ALIGNMENT_ANALYSIS.md  REGISTRY_LIFECYCLE_BACKWARD_COMPATIBILITY.md  REGISTRY_LIFECYCLE_IMPLEMENTATION_SUMMARY.md  REGISTRY_LIFECYCLE_MANAGEMENT_RECOMMENDATIONS.md  SMART_CITY_MCP_SERVER_PHASE2_UPDATE.md  SMART_CITY_PHASE2_MIGRATION_COMPLETE.md  SMART_CITY_PHASE2_MIGRATION_FINAL.md  SMART_CITY_PHASE2_MIGRATION_SUMMARY.md  SMART_CITY_REGISTRATION_PATTERN_EVALUATION.md  STARTUP_WARNINGS_AND_ISSUES.md  architecture-diagrams.md
symphainy-platform/foundations/: __init__.py
symphainy-platform/grafana/: grafana.ini
symphainy-platform/main/: celery.py
symphainy-platform/platform_infrastructure/: __init__.py
symphainy-platform/scripts/: MIGRATION_SETUP_GUIDE.md  QUICK_MIGRATION_START.md  README.md  add-tempo-datasource.sh  analyze_legacy_implementations.py  analyze_naming_inconsistencies.py  application-factory.py  audit-dependencies.sh  check-ports.sh  ci-cd-validation-practical.sh  ci-cd-validation.sh  cleanup_legacy_platform.py  cleanup_test_users.py  complete_refactoring.py  comprehensive_naming_cleanup.py  containerized-orchestration.sh  enhanced-startup.sh  fix-missing-config.sh  fix_abstractions_comprehensive.py  fix_abstractions_precise.py  fix_abstractions_surgical.py  fix_abstractions_targeted.py  fix_agentic_infrastructure_services.py  fix_common_patterns.py  fix_foundation_service_utilities.py  fix_missing_logging_imports.py  fix_missing_logging_imports_abstractions.py  fix_missing_logging_imports_composition.py  get_database_url_helper.py  infrastructure-orchestration.sh  load-secrets.sh  migrate_smart_city_services.py  platform-bootstrap-container.py  platform-bootstrap.py  production-startup.sh  production-validation.sh  proper-startup.sh  refactor_abstractions.py  refactor_abstractions_remove_utilities.py  refactor_all_abstractions.py  (+27 more)
symphainy-platform/tests/: debug_mixin_issue.py  post_office_orchestrator_test.py  smart_city_foundation_gateway_test.py  test_all_smart_city_services_native.py  test_nurse_service_refactoring.py  test_redis_integration.py  test_smart_city_phase2_registration.py  test_smart_city_phase2_registration_simple.py  test_smart_city_protocols.py
symphainy-platform/traefik-config/: middlewares.yml  traefik.yml
symphainy-platform/utilities/: __init__.py  audit_context_utility.py  audit_context_utility_bootstrap.py  (+10 more)
(+4624 files in other folders)
